--- a/src/index.scss
+++ b/src/index.scss
@@ -4,3 +4,13 @@ body {
   color: $color-text;
   background: $color-background;
 }
+
+body,
+#app {
+  min-height: 100vh;
+}
+
+#app {
+  display: flex;
+  flex-direction: column;
+}
